*SVN*

* Update to script.aculo.us 1.6.3 [Thomas Fuchs]

* Update to Prototype 1.5.0_rc1 [sam]

* Formally Deprecate the old rake tasks. [Koz]

* Thoroughly test the FCGI dispatcher.  #5970 [Kevin Clark]

* Remove Dir.chdir in the Webrick DispatchServlet#initialize method.  Fix bad path errors when trying to load config/routes.rb.  [Rick Olson]

* Tighten rescue clauses.  #5985 [james@grayproductions.net]

* Cleaning up tests. [Kevin Clark, Jeremy Kemper]

* Add Dependencies.load_once_paths. [Nicholas Seckar]

* Updated to script.aculo.us 1.6.2 [Thomas Fuchs]

* Assign Routing.controller_paths; fix script/about and rails info controller. [Nicholas Seckar]

* Don't warn dispatcher of Reloadable deprecations. [Nicholas Seckar]

* Rearrange application resetting and preparation, fix bug with leaking subclasses hash in ActiveRecord::Base [Rick Olson]

  ActiveRecord::Base.reset_subclasses is called before Dependencies are cleared and classes removed.
  ActiveRecord::Base.instantiate_observers is called during a Dispatcher preparation callback.

* Add missing mock directories from the autoload_paths configuration.  [Rick Olson]

* Nested controller scaffolding also nests the generated layout. [iain d broadfoot]

* Add "require 'dispatcher'" to webrick server in the continuing quest to squash webrick weirdness. [Nicholas Seckar]

* Add autoload_paths support to Initializer. [Nicholas Seckar]

* Fix Dispatcher.reset_application! so that AR subclasses are removed and Observers re-initialized *after* Reloadable classes are removed. Closes #5743.  [Rick Olson]

* Clarify usage of script/plugin source. Closes #5344. [james.adam@gmail.com]

* Add Dispatcher.to_prepare and config.to_prepare to provide a pre-request hook. [Nicholas Seckar]

* Tweak the Rails load order so observers are loaded after plugins, and reloaded in development mode. Closed #5279.  [Rick Olson]
